k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: website
  labels:
    name: website
    environment: production
    app: my-website
